--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "Learn NPM",
   "main": "index.js",
   "scripts": {
-    "precompile-sass": "mkdir -p dist/assets",
-    "compile-sass": "node-sass src/styles/index.sass > dist/assets/bundle.css",
-    "postcompile-sass": "postcss --use autoprefixer dist/assets/bundle.css -d dist/assets",
-    "precopy-html": "mkdir -p dist",
+    "mkdir": "mkdir -p dist/assets",
+
+    "precompile-sass": "npm run mkdir",
+    "compile-sass": "node-sass src/styles/index.sass > dist/assets/index.css",
+    "postcompile-sass": "postcss --use autoprefixer dist/assets/index.css -d dist/assets",
+
+    "watch-sass": "node-sass --watch --recursive --output dist/assets --source-map true --source-map-contents src/styles",
+
+    "precopy-html": "npm run mkdir",
     "copy-html": "cp src/index.html dist/index.html",
+    "preconcat-js": "npm run mkdir",
+    "concat-js": "browserify src/scripts/index.js -o dist/assets/bundle.js",
 
-    "preconcat-js": "mkdir -p dist/assets",
-    "concat-js": "cat node_modules/jquery/dist/jquery.min.js src/scripts/index.js > dist/assets/bundle.js",
+    "prewatch-js": "npm run mkdir",
+    "watch-js": "watchify src/scripts/index.js -o dist/assets/bundle.js",
 
+    "watch": "npm run watch-sass | npm run watch-js",
     "build": "npm run copy-html && npm run compile-sass && npm run concat-js",
     "view": "http-server dist"
   },
@@ -23,9 +31,11 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^6.4.1",
+    "browserify": "^13.1.0",
     "http-server": "^0.9.0",
     "node-sass": "^3.10.0",
-    "postcss-cli": "^2.6.0"
+    "postcss-cli": "^2.6.0",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "jquery": "^3.1.0"
